feat: create setting ui and merge the dev branch

--- a/midia-fe/package.json
+++ b/midia-fe/package.json
@@ -21,7 +21,7 @@
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "@reduxjs/toolkit": "^2.8.2",
-    "bootstrap": "^5.3.6",
+    "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.12.1",
@@ -29,11 +29,11 @@
     "isbot": "^5.1.27",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
-    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.3",
+    "tabbable": "^6.2.0",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.20"
   },
