--- a/midia-fe/.gitlab-ci.yml
+++ b/midia-fe/.gitlab-ci.yml
@@ -25,51 +25,47 @@ stages:
   - test
   - deploy
 
+cache:
+  key:
+    files:
+      - package-lock.json
+  paths:
+    - node_modules/
+    - .npm/
+  policy: pull-push
+
 lint-job:
   stage: lint
   image: node:20-alpine
+  allow_failure: true
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+    - if: $CI_COMMIT_BRANCH == "dev" || $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   before_script:
     - apk add --no-cache git
-    - npm ci
+    - npm ci --cache .npm --prefer-offline
   script:
     - echo "Running ESLint..."
     - npm run lint
 
-build-job:
+build-docker:
   stage: build
-  image: node:20-alpine
-  script:
-    - npm ci
-    - echo "Building production..."
-    - npm run build
-  artifacts:
-    paths:
-      - node_modules
-      - package.json
-      - react-router.config.ts
-      - Dockerfile
-
-# Only deploy when push a new tag created on main branch
-deploy-job:
-  stage: deploy
-  image: gitlab/dind
+  image: docker:24.0.5
   services:
-    - docker:dind
-  environment: production
-  only:
-    - tags
+    - name: docker:24.0.5-dind
+  tags:
+    - saas-linux-medium-amd64
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: always
+    - when: never
+  before_script:
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
   script:
-    - echo "Checking if tag is on main branch..."
-    - |
-      if git merge-base --is-ancestor origin/main HEAD; then
-        echo "Tag is from main branch ✅"
-      else
-        echo "❌ Tag is not from main branch. Skipping build."
-        exit 0
-      fi
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
     - echo "Building Docker Image..."
-    - docker build -t "$IMAGE_NAME:$VERSION_TAG" .
+    - docker build -t $IMAGE_NAME:$VERSION_TAG .
     - echo "Docker Image successfully built."
     - echo "Pushing Docker Image..."
-    - docker push "$IMAGE_NAME:$VERSION_TAG"
+    - docker push $IMAGE_NAME:$VERSION_TAG
+    - echo "Done..."
