--- a/midia-be/.env.example
+++ b/midia-be/.env.example
@@ -1,4 +1,4 @@
-DGRAPH_ADDRESS=localhost
+DGRAPH_HOST=localhost
 DGRAPH_PORT=9080
 GOOGLE_OAUTH2_CLIENT_ID=YOUR_CLIENT_ID
 GOOGLE_OAUTH2_CLIENT_SECRET=YOUR_CLIENT_SECRET
@@ -7,3 +7,4 @@ SMTP_HOST=YOUR_SMTP_HOST
 SMTP_PORT=YOUR_SMTP_PORT
 SMTP_USERNAME=YOUR_SMTP_USERNAME
 SMTP_PASSWORD=YOUR_SMTP_PASSWORD
+GCS_BUCKET_NAME=YOUR_GCS_BUCKET_NAME
