--- a/midia-be/build.gradle
+++ b/midia-be/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.4.5'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'com.netflix.dgs.codegen' version '7.0.3'
+    id 'com.diffplug.spotless' version '7.0.4'
 }
 
 group = 'com.midia'
@@ -25,6 +26,17 @@ repositories {
     mavenCentral()
 }
 
+spotless {
+    java {
+        targetExclude 'build/generated/**'
+        trimTrailingWhitespace()
+        removeUnusedImports()
+        palantirJavaFormat()
+        formatAnnotations()
+        importOrder('jakarta', 'com', '', 'org', 'java|javax','\\#')
+    }
+}
+
 ext {
     set('netflixDgsVersion', "10.1.2")
     set('dgraph4jVersion', "24.2.0")
@@ -33,16 +45,18 @@ ext {
     set('springdocVersion', "2.8.8")
     set('graphqlJavaExtendedVersion', "22.0")
     set('mapstructVersion', "1.6.3")
+    set('springCloudGcpVersion', "6.2.2")
 }
 
-
 dependencies {
+    implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation "com.google.auto.service:auto-service:${googleAutoServiceVersion}"
     annotationProcessor "com.google.auto.service:auto-service:${googleAutoServiceVersion}"
     implementation "com.graphql-java:graphql-java-extended-validation:${graphqlJavaExtendedVersion}"
     implementation "com.graphql-java:graphql-java-extended-scalars:${graphqlJavaExtendedVersion}"
     implementation 'com.netflix.graphql.dgs:graphql-dgs-extended-scalars'
+    implementation 'com.netflix.graphql.dgs:graphql-dgs-extended-validation'
     implementation 'com.google.protobuf:protobuf-java:4.31.0'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.19.0'
     implementation("io.grpc:grpc-netty:${grpcVersion}")
@@ -56,6 +70,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    implementation 'org.springframework.security:spring-security-oauth2-jose'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation('org.springframework.boot:spring-boot-starter-web') {
@@ -82,6 +97,7 @@ dependencies {
 dependencyManagement {
     imports {
         mavenBom "com.netflix.graphql.dgs:graphql-dgs-platform-dependencies:${netflixDgsVersion}"
+        mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:$springCloudGcpVersion"
     }
 }
 
