--- a/midia-be/build.gradle
+++ b/midia-be/build.gradle
@@ -45,11 +45,11 @@ ext {
     set('springdocVersion', "2.8.8")
     set('graphqlJavaExtendedVersion', "22.0")
     set('mapstructVersion', "1.6.3")
-    set('springCloudGcpVersion', "6.2.2")
+//     set('springCloudGcpVersion', "6.2.2")
 }
 
 dependencies {
-    implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
+//     implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation "com.google.auto.service:auto-service:${googleAutoServiceVersion}"
     annotationProcessor "com.google.auto.service:auto-service:${googleAutoServiceVersion}"
@@ -97,7 +97,7 @@ dependencies {
 dependencyManagement {
     imports {
         mavenBom "com.netflix.graphql.dgs:graphql-dgs-platform-dependencies:${netflixDgsVersion}"
-        mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:$springCloudGcpVersion"
+//         mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:$springCloudGcpVersion"
     }
 }
 
