--- a/midia-be/build.gradle
+++ b/midia-be/build.gradle
@@ -45,11 +45,12 @@ ext {
     set('springdocVersion', "2.8.8")
     set('graphqlJavaExtendedVersion', "22.0")
     set('mapstructVersion', "1.6.3")
-//     set('springCloudGcpVersion', "6.2.2")
+    set('springCloudGcpVersion', "6.2.2")
 }
 
 dependencies {
-//     implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
+    implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation "com.google.auto.service:auto-service:${googleAutoServiceVersion}"
     annotationProcessor "com.google.auto.service:auto-service:${googleAutoServiceVersion}"
@@ -78,6 +79,8 @@ dependencies {
     }
     implementation 'org.springframework.boot:spring-boot-starter-undertow'
     implementation 'com.netflix.graphql.dgs:graphql-dgs-spring-graphql-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation "org.mapstruct:mapstruct:${mapstructVersion}"
@@ -97,7 +100,7 @@ dependencies {
 dependencyManagement {
     imports {
         mavenBom "com.netflix.graphql.dgs:graphql-dgs-platform-dependencies:${netflixDgsVersion}"
-//         mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:$springCloudGcpVersion"
+        mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:$springCloudGcpVersion"
     }
 }
 
